# program-deployer-template

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs  manager_config.rs  program_params.rs
manager_configs/: README.md
output/: README.md
programs/program_template/: Cargo.toml  README.md
programs/program_template/program_params/: mainnet.toml
programs/program_template/src/: program_builder.rs
src/: main.rs  program_builder.rs
