[workspace]
members = [
    "programs/*",
    "lib",
]
resolver = "2"

[workspace.package]
name       = "program-deployer"
authors    = ["Timewave Labs"]
edition    = "2021"
license    = "Apache-2.0"
version    = "0.1.0"
repository = "https://github.com/timewave-computer/program_deployer"

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[workspace.dependencies]
valence-program-manager = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-program-manager", tag = "v0.1.2" }
deployer-lib            = { path = "lib" }
serde_json              = "1.0.125"
clap                    = { version = "4.5.13", features = ["derive"] }
config                  = { version = "0.15.8", features = ["toml"] }
glob                    = "0.3"
tokio                   = "1.40.0"
chrono                  = "0.4.40"
dotenvy                 = "0.15.7"
cmd_lib                 = "1.3.0"
env_logger              = "0.11.5"
log                     = "0.4.22"

# CW
cosmwasm-std = { version = "2.1.3" }
cw-utils     = "2.0.0"
cw-denom     = { package = "cw-denom", git = "https://github.com/DA0-DA0/dao-contracts", branch = "cw-std-2" }

# Libraries
valence-authorization                = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-authorization", features = ["library"], tag = "v0.1.2" }
valence-base-account                 = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-base-account", features = ["library"], tag = "v0.1.2" }
valence-processor                    = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-processor", features = ["library"], tag = "v0.1.2" }
valence-splitter-library             = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-splitter-library", features = ["library"], tag = "v0.1.2" }
valence-astroport-lper               = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-lper", features = ["library"], tag = "v0.1.2" }
valence-forwarder-library            = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-forwarder-library", features = ["library"], tag = "v0.1.2" }
valence-astroport-withdrawer         = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-withdrawer", features = ["library"], tag = "v0.1.2" }
valence-generic-ibc-transfer-library = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-generic-ibc-transfer-library", features = ["library"], tag = "v0.1.2" }
valence-neutron-ibc-transfer-library = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-neutron-ibc-transfer-library", features = ["library"], tag = "v0.1.2" }
valence-reverse-splitter-library     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-reverse-splitter-library", features = ["library"], tag = "v0.1.2" }
valence-osmosis-gamm-lper            = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-gamm-lper", features = ["library"], tag = "v0.1.2" }
valence-osmosis-gamm-withdrawer      = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-gamm-withdrawer", features = ["library"], tag = "v0.1.2" }
valence-osmosis-cl-lper              = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-cl-lper", features = ["library"], tag = "v0.1.2" }
valence-osmosis-cl-withdrawer        = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-cl-withdrawer", features = ["library"], tag = "v0.1.2" }
valence-program-registry             = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-program-registry", features = ["library"], tag = "v0.1.2" }

# utils
valence-account-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-account-utils", tag = "v0.1.2" }
valence-astroport-utils     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-astroport-utils", tag = "v0.1.2" }
valence-osmosis-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-osmosis-utils", tag = "v0.1.2" }
valence-authorization-utils = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-authorization-utils", tag = "v0.1.2" }
valence-ibc-utils           = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-ibc-utils", tag = "v0.1.2" }
valence-macros              = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-macros", tag = "v0.1.2" }
valence-processor-utils     = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-processor-utils", tag = "v0.1.2" }
valence-library-base        = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-library-base", tag = "v0.1.2" }
valence-library-utils       = { git = "https://github.com/timewave-computer/valence-protocol", package = "valence-library-utils", tag = "v0.1.2" }
